# blackboxai-1742482083269

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
tg_tool/: .pre-commit-config.yaml  Dockerfile
tg_tool/.github/workflows/: ci.yml
tg_tool/dashboard/: app.js  index.html
tg_tool/output/: uids_20250320_163833.json  uids_20250320_173327.json  uids_20250320_173431.json  uids_20250320_174829.json  uids_20250320_180147.json  uids_20250320_180305.json
tg_tool/telegram_uid_scraper/: __init__.py  __main__.py  auto_adder.py  cli.py  filters.py  logger.py  scraper.py  server.py  types.py  ui.py
