[tool.poetry]
name = "telegram-uid-scraper"
version = "0.1.0"
description = "A stealth scraper for Telegram group member information"
authors = ["BLACKBOXAI"]
readme = "README.md"
packages = [{include = "telegram_uid_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
aiohttp = "^3.9.3"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
telegram-uid-scraper = "telegram_uid_scraper.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=telegram_uid_scraper --cov-report=term-missing -v"
asyncio_mode = "auto"